--- a/Cluedo/Cluedo.csproj
+++ b/Cluedo/Cluedo.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Character.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Room.cs" />
     <Compile Include="Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
