--- a/Cluedo/Cluedo.csproj
+++ b/Cluedo/Cluedo.csproj
@@ -45,8 +45,10 @@
   <ItemGroup>
     <Compile Include="Board.cs" />
     <Compile Include="BoardPosition.cs" />
+    <Compile Include="Card.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Room.cs" />
